tests/paczka1/small_fuzzy/69311926.err
Error in line 1: sZj A741 28,9
Error in line 5: A366 A741 18,9
Error in line 2: OY7d0nL A366 36,8
Error in line 10: 7CnUglg A366 95,4
